# central-api-cpp

./: .gitignore  CMakeLists.txt  conanfile.py  conanfile.txt  deps
src/: CentralTypes.cpp  CentralTypes.hpp  HttpClient.cpp  HttpClient.hpp  api-test.cpp  central-api.cpp  central-api.hpp  http.cpp  http.hpp  socket.cpp  socket.hpp  types.cpp  types.hpp  utils.cpp  utils.hpp  version.cpp  version.hpp
